--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://quartz.jzhao.xyz/"
+baseURL = "https://ar.falsy.cat/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
